2014 XXX XX Sergey Satskiy <sergey.satskiy@gmail.com>

* New feature: navigation bar
* Bug fix: mouse click in the editor led to a sporadic crash
* New feature: implementation of a context menu for the redirected IO console
  including copying everything with timestamps

2014 Mar 11 Sergey Satskiy <sergey.satskiy@gmail.com>

* Version 2.3.0
* New feature: debugging and running script now can have IO redirected to IDE
* New feature: allow selecting multiple files in the 'Open file' dialog
* New feature: display the number of highlighted occurences on the status bar
* Bug fix: crash when 'Edit' main menu is opened on the startup screen
* New feature: detect TAB TAB clicks after a character and add spaces if
  there is no completion
* Better pylint messages parser: collects positions in line if available and
  jumps to the certain column if so
* Bug fix: opening recent project from the project main menu lead to crash if
  the project does not exist anymore
* New feature: custom garbage collector which runs in the GUI thread
* Get rid of checking if a new version is available when IDE starts

2013 Dec 26 Sergey Satskiy <sergey.satskiy@gmail.com>

* Version 2.2.2
* Bug fix: wrong brutal stop of a debug session on Fedora
* Bug fix: side bars must not be expanded via clicking on disabled tabs
* Improvement: get rid of serialization/deserialization of the python files
  parser info cache
* New feature: user selectable sorting order for the tabs in the navigation menu
* New feature: editor 'highlight in outline browser' context menu item
* Bug fix: exception in some cases when 'highlight in FS browser' is selected
* New feature: user selectable behavior - to preserve or not the tab order upon
  selection a tab in the tab list button menu
* Bug fix: on some systems find/replace comboboxes expanded too much in case of
  long patterns
* Bug fix: SVN plugin log window - incorrect revision number based sorting